--- a/src/styles/Tab.css
+++ b/src/styles/Tab.css
@@ -7,3 +7,87 @@
     word-wrap: break-word;
     white-space: normal;
 }
+
+.title-icon {
+    display: flex;
+    gap: 0.5em;
+    align-items: baseline;
+    justify-content: center;
+}
+.title-icon:hover {
+    cursor: pointer;
+}
+
+
+.mock-wrapper {
+    width: 80%;
+    height: auto;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    margin-left: auto;
+    padding: 10%;
+    border: 1px solid red;
+    display: flex;
+    align-items: flex-start;
+    position: absolute;
+}
+
+.required {
+    height: auto;
+    width: 80%;
+    border: 1px solid red;
+    border-radius: 5px;
+    transition: width 0.3s ease-out 0s;
+}
+
+.required.ease-in{
+    width: 50%;
+}
+.my-button {
+    margin: 10px;
+    visibility: visible;
+    position: absolute;
+    transition: visibility 0.2s ease-in ;
+}
+
+.optional {
+    height: auto;
+    width: 40%;
+    border: 1px solid red;
+    border-radius: 5px;
+    padding: 10px;
+    position: absolute;
+    visibility: hidden;
+    right: 0.5%;
+    transition: visibility 0.4s ease-in 0s;
+}
+
+ .optional.ease-in {
+     visibility: visible;
+    right: 0;
+}
+
+ .my-button.ease-in {
+     display: none;
+ }
+
+ .arrow{
+     display: none;
+ }
+ .arrow.ease-in{
+     display: block;
+     position: absolute;
+     right: 43%
+ }
+
+ .arrow:hover{
+     cursor: pointer;
+ }
+
+
+ .form-wrapper {
+     height: auto;
+     border-radius: 25px;
+     display: flex;
+     justify-content: space-between;
+ }
