--- a/src/styles/Tab.css
+++ b/src/styles/Tab.css
@@ -1,11 +1,26 @@
 .tab-wrapper-div {
-    width: 80%;
+    background-color: #fb6f92;
+    border-radius: 50px;
+}
+
+.actual-wrapper {
+    width: 60%;
     height: auto;
-    margin: 10% auto;
-    padding: 10%;
-    border: 1px solid red;
-    word-wrap: break-word;
-    white-space: normal;
+    padding: 30px;
+    border-radius: 50px;
+    background: #005f73;
+    box-shadow: inset 20px 20px 60px #005162,
+    inset -20px -20px 60px #006d84;
+}
+
+
+.form-wrapper {
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    padding: 20px;
 }
 
 .title-icon {
@@ -18,24 +33,9 @@
     cursor: pointer;
 }
 
-
-.mock-wrapper {
-    width: 80%;
-    height: auto;
-    margin-top: 5%;
-    margin-bottom: 5%;
-    margin-left: auto;
-    padding: 10%;
-    border: 1px solid red;
-    display: flex;
-    align-items: flex-start;
-    position: absolute;
-}
-
 .required {
     height: auto;
-    width: 80%;
-    border: 1px solid red;
+    width: 60%;
     border-radius: 5px;
     transition: width 0.3s ease-out 0s;
 }
@@ -47,24 +47,23 @@
     margin: 10px;
     visibility: visible;
     position: absolute;
-    transition: visibility 0.2s ease-in ;
+    transition: visibility 2s ease-in 100s;
 }
 
 .optional {
     height: auto;
     width: 40%;
-    border: 1px solid red;
     border-radius: 5px;
     padding: 10px;
     position: absolute;
     visibility: hidden;
-    right: 0.5%;
-    transition: visibility 0.4s ease-in 0s;
+    right: -100%;
+    transition: visibility 4s ease-in 1s;
 }
 
  .optional.ease-in {
      visibility: visible;
-    right: 0;
+    right: 3%;
 }
 
  .my-button.ease-in {
@@ -84,10 +83,24 @@
      cursor: pointer;
  }
 
+.form-wrapper .ant-form-item {
+    margin-bottom: 0px !important;
+}
+.form-wrapper  .ant-form-item-label {
+    line-height: 20px !important;
+}
+.form-wrapper  .ant-form-item-control {
+    line-height: 0px !important;
+}
 
- .form-wrapper {
-     height: auto;
-     border-radius: 25px;
-     display: flex;
-     justify-content: space-between;
- }
+.ant-select-selection--single {
+    border-radius: 200px !important;
+}
+
+.ant-select-selection--multiple {
+    border-radius: 200px !important;
+}
+
+.ant-calendar-picker-input {
+    border-radius: 200px !important;
+}
